<resources>
    <string name="app_name">firstProject</string>
    <string name="resource">+/-</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="coma">,</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="fiv">5</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
</resources>