<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="3dp"
    tools:layout_editor_absoluteY="-22dp">


    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:backgroundTint="@color/greyApple"

        android:text="C"
        android:onClick="clearNum"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="switchOperator"
        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:backgroundTint="@color/greyApple"
        android:text="@string/resource"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="204dp"
        android:backgroundTint="@color/greyApple"
        android:text="@string/percent"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button29"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/fiv"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/button31"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button29" />

    <Button
        android:id="@+id/button32"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="2"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button30" />

    <Button
        android:id="@+id/button33"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button18"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/coma"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/buttonRounded"
        app:layout_constraintTop_toBottomOf="@+id/button33" />

    <Button
        android:id="@+id/button30"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/five"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button29"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button21"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/nine"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button28"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/six"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button24"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blackApple"
        android:text="@string/eight"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button19"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:backgroundTint="@color/orangeApple"
        android:text="@string/division"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/orangeApple"
        android:text="@string/multiply"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button26"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/orangeApple"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button28"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button27"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/orangeApple"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/button26" />

    <Button
        android:id="@+id/button34"
        android:layout_width="80dp"
        android:layout_height="90dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/orangeApple"
        android:text="@string/equals"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/buttonRounded"
        android:layout_width="180dp"
        android:layout_height="86dp"

        android:onClick="addNumToTextValue"

        android:layout_marginStart="16dp"
        android:layout_marginTop="612dp"
        android:backgroundTint="@color/blackApple"

        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/_0"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>